apps/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus
  annotations:
    virtual-server.f5.com/ip: 10.1.10.10
    virtual-server.f5.com/partition: kubernetes
spec:
  ingressClassName: f5
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
